rounded answers with long decimals to four decimal places so that they don’t overflow the display, ensured that Pressing equals before entering all of the numbers or an operator could cause problems, ensured that pressing the operator twice will populate the last operator added and return results and also made sure when a user has cleared the screen they will start a new calculation

--- a/style.css
+++ b/style.css
@@ -15,19 +15,21 @@
     margin-top: 20px;
     border: 3px solid black;
     border-radius: 10px;
-    
 
 }
 
 .display {
     background-color: white;
-    text-align: center;
     margin-bottom: 10px;
     padding-bottom: 40px;
     padding-top: 20px;
     margin-top: 90px;
-    border: 8px solid greenyellow;
-    border-radius: 5px;
+    border: 15px solid greenyellow;
+    border-radius: 8px;
+    text-align: center;
+    width: 100%;
+    height: 90px;
+
 
 }
 
